[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/prompt_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/HUD.gd" type="Script" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="KeysLabel" type="Label" parent="."]
visible = false
anchor_right = 0.5
margin_left = 2.0
margin_top = 2.0
theme = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Keys 0"

[node name="TimeLabel" type="Label" parent="."]
anchor_right = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 11.0
theme = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "00:00:00"

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 0.5
margin_left = 2.0
margin_top = 10.0
theme = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
text = "Score 0"
